--- a/github.html
+++ b/github.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <title>Github commits of Python</title>
+  <title>Github commits listener</title>
   <link href="github.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
